--- a/HuntTheWumpus/EditTrivia.resx
+++ b/HuntTheWumpus/EditTrivia.resx
@@ -117,10 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="cavePath" xml:space="preserve">
-    <value>/Resources/savedCaves.json</value>
-  </data>
-  <data name="triviaPath" xml:space="preserve">
-    <value>/Resources/triviaQuestions.json</value>
-  </data>
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
